
2016-08-04  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (initialize_type): renamed to deduce_initialize_type.
	* codegen.c (deduce_initialize_type): fixed bug #287, where reference-
	  modified group item was not treated as an elementary item.

2016-08-03  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Redo listings when copybooks are missing. Changed replace
	  string positioning in free format listings.
	* cobc.h: Add list file source format field.
	* pplex.l, ppparse.y: Record source format in the list file struct.

2016-08-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): Fix SIGSEGV for uncommon literals - bug 195
	* cobc.c, cobc.h: changes to listfile generation: start use of compiler
	  configurations (cb_tab_width, cb_text_col)

2016-08-02  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Fixes to put file not found into the listing file. Also,
	  changes to list the "file.i" preprocessed file.

2016-08-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (set_picture): fixed SIGSEGV on processing invalid
	  picture definitions, print "INVALID" as picture instead
	* error.c (print_error): fixed SIGSEGVs for empty prefix and
	  missing source files
	* parser.y: bug #259 - better checks for STRING syntax

2016-08-01  Dave Pitts <dpitts@cozx.com>

	* cobc.c, error.c pplex.l: Changes to change fixed sized character
	  arrays to pointers. Allocate strings based on length.
	* cobc.h: Moved structure declatations and added comments.

2016-08-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c, cobc.h (cb_get_strerror): own reentrant version of strerror
	* error.c: extracted (configuration_error_head) from (configuration_error)
	* error.c: adjusted (cb_perror) to receive a formatted message
	* adjusted callers of (cb_perror)

2016-08-01  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (renames_entry): fixed bug #289 where PICTURE of renamed
	  field was not copied to the RENAMES item.
